[package]
name = "minimult_cortex-m"
version = "0.3.2"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"

description = "A minimal multitask library, or RTOS, for Cortex-M microcontrollers."

#documentation = "..."
homepage = "https://github.com/convexbrain/Minimult/tree/master/minimult_cortex-m"
repository = "https://github.com/convexbrain/Minimult"

readme = "README.md"

keywords = ["multitask", "RTOS", "cortex-m"]

categories = ["embedded", "no-std", "asynchronous"]

license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"

[dependencies.num-integer]
version = "0.1.41"
default-features = false

[dev-dependencies]
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = {version = "0.5.3", features = ["exit"]}

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
