[package]
name = "led_blink"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
nrf52840-pac = "0.8.0"
panic-semihosting = "0.5.3"

[features]
rt = ["nrf52840-pac/rt"]
default = ["rt"]

[dependencies.num-integer]
version = "0.1.36"
default-features = false
