[package]
name = "led_blink"
version = "0.1.0"
authors = ["convexbrain <convexbrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
panic-semihosting = "0.5.3"
minimult_cortex-m = {path = "../../../minimult_cortex-m"}
nrf9160_pca20035 = {git = "https://github.com/convexbrain/fw-nrfconnect-nrf", branch = "feature_rust"}
#nrf9160_pca20035 = {path = "../../../../fw-nrfconnect-nrf/rust/nrf9160_pca20035"}

[dependencies.nrf91]
version = "0.1.1"
features = ["rt"]

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
